Adding gradle build for more subcategories ...